--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,3 +8,6 @@ nav:
   - Getting started: getting_started.md
   - Data management: data_management.md
   - Plot panels: plot_panels.md
+  - Panel linkages: panel_linkages.md
+  - "Example 1: 2D visualization": example1_2dVisualization.md
+  - "Example 2: 3D visualization": example2_3dVisualization.md
