update: docs, bug fix--github website error

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,5 +10,5 @@ nav:
   - Plot panels: plot_panels.md
   - Panel linkages: panel_linkages.md
 - Examples:
-  - "Example 1: 2D visualization": example1_2dVisualization.md
-  - "Example 2: 3D visualization": example2_3dVisualization.md
+  - Example 1 - 2D visualization: example1_2dVisualization.md
+  - Example 2 - 3D visualization: example2_3dVisualization.md
